Update functin added for profiles

--- a/static_project/style.css
+++ b/static_project/style.css
@@ -11,3 +11,13 @@ body {
 .mb-7 {
     margin-bottom: 7px !important;
 }
+
+.mt-5 {
+    margin-top: 5px !important;
+}
+
+.mymodal {
+    height: 300px !important;
+    top: 200px !important;
+    font-size: 20px !important;
+}
