--- a/profiles/templates/profiles/my_profile.html
+++ b/profiles/templates/profiles/my_profile.html
@@ -5,6 +5,88 @@ my profile
 {% endblock title %}
 
 {% block content %}
-my profile
-{% endblock content %}
 
+<!--model-->
+<div class="ui modal mymodal">
+    <i class="close icon"></i>
+    <div class="header">
+        Update Your Profile
+    </div>
+    <div class="image content">
+        <div class="ui medium image">
+            <img src={{ profile.avatar.url }}>
+        </div>
+        <div class="description">
+            <div class="ui header">Provide some additional/newest info about you</div>
+            <form action="" method="POST" class="ui form" enctype="multipart/form-data">
+                {% csrf_token %}
+
+                {{ form }}
+        </div>
+    </div>
+    <div class="actions">
+        <button type="submit" class="ui positive right labeled icon button">
+            Update
+            <i class="checkmark icon"></i>
+        </button>
+        </form>
+    </div>
+</div>
+
+
+<div class="ui segment">
+    {% if confirm %}
+    <div class="ui green message">Your profile has been updated</div>
+    {% endif %}
+    <h3>My Profile: {{request.user}}</h3>
+    <div class="ui grid">
+        <div class="row">
+            <div class="six wide column">
+                <img class="ui medium rounded image" src={{profile.avatar.url}}>
+                <div class="row mt-5">
+                    <button class="ui secondary button" id="modal-btn">Update your profile</button>
+                </div>
+            </div>
+            <div class="ten wide column">
+                <table class="ui table">
+                    <tbody>
+                        <tr>
+                            <td>Username</td>
+                            <td>{{profile.user}}</td>
+                        </tr>
+                        <tr>
+                            <td>Username</td>
+                            <td>{{profile.user}}</td>
+                        </tr>
+                        <tr>
+                            <td>First Name</td>
+                            <td>{{profile.first_name}}</td>
+                        </tr>
+                        <tr>
+                            <td>Last Name</td>
+                            <td>{{profile.last_name}}</td>
+                        </tr>
+                        <tr>
+                            <td>Bio</td>
+                            <td>{{profile.bio}}</td>
+                        </tr>
+                        <tr>
+                            <td>number of Friends</td>
+                            <td>
+                                <ul>
+                                    {% for friend in profile.get_friends %}
+                                    <li>{{friend}}</li>
+                                    {% endfor %}
+                                </ul>
+                                {{profile.get_friends_no}}
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+
+{% endblock content %}
